--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
             "email": "sblnog@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+      "php": ">=5.4"
+    },
+    "require-dev": {
+      "phpunit/phpunit": "~4.0",
+      "mockery/mockery": "~0.9"
+    },
     "autoload": {
         "psr-4": {
             "alairock\\lodash\\": "src/alairock/lodash/"
